--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: go
 sudo: false
-go_import_path: go.uber.org/dig
+go_import_path: github.com/anuvu/dig
 
 matrix:
   include:
-    - go: 1.7
-    - go: 1.8
     - go: 1.9
       env: LINT=1
 
